testament/tests/shouldfail/tnimout.nim
discard """
  targets: "c"
  nimout: "Hello World!"
  action: compile
"""

static:
  echo "something else"
